--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+      - family: RalewayELight
+        fonts:
+         - asset: fonts/Raleway-ExtraLight.ttf
+      - family: RalewayLight
+        fonts:
+         - asset: fonts/Raleway-Light.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
