--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,20 @@ dependencies:
     sdk: flutter
   firebase_auth: ^1.0.0
   google_sign_in: ^4.5.3
-  sign_button: ^2.0.0
+  #sign_button: ^2.0.0
+  carousel_slider: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
+    
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "image/logo.png"
   flutter_test:
     sdk: flutter
 
@@ -49,7 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - image/logo.png
-  #   - images/a_dot_ham.jpeg
+     - image/slider/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
