--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,12 @@ dependencies:
     sdk: flutter
   firebase_auth: ^1.0.0
   google_sign_in: ^4.5.3
+  flutter_swiper: ^1.1.6
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+  #flutter_svg: ^0.17.4
   #sign_button: ^2.0.0
-  carousel_slider: ^3.0.0
+  #carousel_slider: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
