--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: any
+  path_provider: any
   firebase_auth: ^1.0.0
   google_sign_in: ^4.5.3
   flutter_swiper: ^1.1.6
